--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "mobx": "^6.8.0",
+    "mobx-react": "^7.6.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.8.6",
+    "react-player": "^2.11.2",
+    "react-playlist-player": "^1.2.6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
