--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ably": "^1.2.36",
     "axios": "^1.3.4",
     "mobx": "^6.8.0",
     "mobx-react": "^7.6.0",
@@ -17,6 +16,7 @@
     "react-player": "^2.11.2",
     "react-playlist-player": "^1.2.6",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
