--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "mobx": "^6.8.0",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-playlist-player": "^1.2.6",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
