--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-h5-audio-player": "^3.8.6",
     "react-player": "^2.11.2",
     "react-playlist-player": "^1.2.6",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "uuid": "^9.0.0",
