--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -12,6 +13,8 @@
     "axios": "^1.3.4",
     "cdbreact": "^1.5.8",
     "date-fns": "^2.29.3",
+    "kit": "^0.1.2",
+    "mdb": "^0.1.0",
     "mdb-react-ui-kit": "^5.1.0",
     "mobx": "^6.8.0",
     "mobx-react": "^7.6.0",
@@ -25,6 +28,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "ui": "^0.2.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
