--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mobx": "^6.8.0",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
