--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "garanceasbl",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://boruchowitchJ.github.io/garanceAsbl",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -41,9 +40,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
