--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@iconify/react": "^4.1.0",
+    "@remix-run/router": "^1.6.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -30,7 +32,7 @@
     "react-player": "^2.11.2",
     "react-playlist-player": "^1.0.11",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^0.9.5",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
     "ui": "^0.2.4",
     "uuid": "^9.0.0",
